[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Attacks/Weapons/Arrow.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Scripts/Attacks/WoodenArrow.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 52.3709, 12.0778 )

[node name="WoodenArrow" type="Area2D" groups=[
"Attack",
]]
position = Vector2( -3.59244, -2.39494 )
z_index = 1
script = ExtResource( 2 )

[node name="AttackingArea" type="CollisionShape2D" parent="."]
position = Vector2( 0.221527, 0.246459 )
shape = SubResource( 1 )

[node name="WeaponImage" type="Sprite" parent="."]
position = Vector2( 3, 0 )
scale = Vector2( 0.683063, 0.588956 )
texture = ExtResource( 1 )

[node name="VisibleTimer" type="Timer" parent="."]
wait_time = 0.2
[connection signal="area_entered" from="." to="." method="_on_WoodenArrow_area_entered"]
[connection signal="timeout" from="VisibleTimer" to="." method="_on_VisibleTimer_timeout"]
